* Fixed the background image to align to the bottom * Fixed fade-in effect in the Home app * Removed obsolete styles

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/variables/mixins.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/variables/mixins.less
@@ -640,18 +640,6 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.45);
-  background-repeat: no-repeat;
-  background-position: center center;
-
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-  font-family: @admin-font-family;
-  font-size: @admin-font-size;
 
   .center-panel {
     width: 100%;
@@ -663,10 +651,10 @@
 
   .lazy-image {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center bottom;
     background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
